# Makefile for libprocess

nobase_include_HEADERS =		\
  process/async.hpp			\
  process/clock.hpp			\
  process/collect.hpp			\
  process/defer.hpp			\
  process/deferred.hpp			\
  process/delay.hpp			\
  process/dispatch.hpp			\
  process/event.hpp			\
  process/executor.hpp			\
  process/filter.hpp			\
  process/future.hpp			\
  process/gc.hpp			\
  process/gmock.hpp			\
  process/gtest.hpp			\
  process/http.hpp			\
  process/id.hpp			\
  process/io.hpp			\
  process/latch.hpp			\
  process/logging.hpp			\
  process/message.hpp			\
  process/mime.hpp			\
  process/once.hpp			\
  process/pid.hpp			\
  process/process.hpp			\
  process/profiler.hpp			\
  process/protobuf.hpp			\
  process/run.hpp			\
  process/socket.hpp			\
  process/statistics.hpp		\
  process/time.hpp			\
  process/timeout.hpp			\
  process/timer.hpp
