# Makefile for libprocess

nobase_include_HEADERS =		\
  libprocess/async.hpp			\
  libprocess/clock.hpp			\
  libprocess/collect.hpp			\
  libprocess/defer.hpp			\
  libprocess/deferred.hpp			\
  libprocess/delay.hpp			\
  libprocess/dispatch.hpp			\
  libprocess/event.hpp			\
  libprocess/executor.hpp			\
  libprocess/filter.hpp			\
  libprocess/future.hpp			\
  libprocess/gc.hpp			\
  libprocess/gmock.hpp			\
  libprocess/gtest.hpp			\
  libprocess/http.hpp			\
  libprocess/id.hpp			\
  libprocess/io.hpp			\
  libprocess/latch.hpp			\
  libprocess/logging.hpp			\
  libprocess/message.hpp			\
  libprocess/mime.hpp			\
  libprocess/once.hpp			\
  libprocess/pid.hpp			\
  libprocess/process.hpp			\
  libprocess/profiler.hpp			\
  libprocess/protobuf.hpp			\
  libprocess/run.hpp			\
  libprocess/socket.hpp			\
  libprocess/statistics.hpp		\
  libprocess/time.hpp			\
  libprocess/timeout.hpp			\
  libprocess/timer.hpp
